Nav width overflow bug fixed

--- a/frontend/src/components/Naviagation/Navigation.css
+++ b/frontend/src/components/Naviagation/Navigation.css
@@ -18,6 +18,10 @@ body{
     color: black;
 }
 
+#navButton{
+    position: relative;
+    left: 50px;
+}
 
 .profile-dropdown{
     text-align: center;
